# random

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/example/hellonativeapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hellonativeapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
c/lexical/: build.sh  expression.in  lexical.c
c/shell/: Makefile  main.c
haskell/hello/: Makefile  hello.hs
haskell/scheme/: CHANGELOG.md  Makefile  scheme.cabal
haskell/scheme/src/: Main.hs
java/jenkins/: Dockerfile  Makefile  README.md  plugins.txt
java/jenkins/support/: download_plugins.sh
mobile/HelloNativeApp/: settings.gradle
mobile/HelloNativeApp/app/: build.gradle
mobile/HelloNativeApp/app/src/main/java/com/example/hellonativeapp/: MainActivity.java
mobile/HelloNativeApp/app/src/main/res/layout/: activity_main.xml
mobile/HelloNativeApp/app/src/main/res/values/: colors.xml  strings.xml
mobile/HelloNativeApp/flutter_app/: README.md  pubspec.yaml
mobile/HelloNativeApp/flutter_app/lib/: main.dart
mobile/HelloNativeApp/gradle/wrapper/: gradle-wrapper.properties
mobile/flutter_demo/lib/: main.dart
ruby/rabbitmq/: Dockerfile  Makefile  README.md
ruby/rabbitmq/bunny/: bunny.rb
ruby/rabbitmq/bunny/app/: consumer.rb  producer.rb
ruby/rabbitmq/sneakers/: Gemfile  sneakers.rb
ruby/rabbitmq/sneakers/app/: worker.rb
rust/auth-api/: .env  Cargo.toml  api.http
rust/auth-api/migrations/2020-05-16-004324_users/: up.sql
rust/auth-api/migrations/2020-05-16-153921_invitations/: up.sql
rust/auth-api/src/: auth_handler.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  schema.rs
(+2 files in other folders)
