[package]
name = "auth-api"
version = "0.1.0"
authors = ["Fernando Almeida <fernando@fernandoalmeida.net>"]
edition = "2018"

[dependencies]
actix-identity = "0.1.0"
actix-web = "1.0.3"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.6"
lazy_static = "1.3.0"
r2d2 = "0.8"
serde_derive = "1.0"
